src/types/snapshots/treetop_core__types__user__tests__test_user_serialization__user_with_groups_and_namespaces-2.snap
---
source: src/types/user.rs
expression: user.cedar_id()
---
namespace1::namespace2::User::"test_user"
