src/types/snapshots/treetop_core__types__user__tests__test_user_serialization__user_with_one_group_and_one_namespace.snap
---
source: src/types/user.rs
expression: serialized
---
{
  "groups": [
    {
      "id": "group1",
      "namespace": [
        "namespace1"
      ]
    }
  ],
  "id": "test_user",
  "namespace": [
    "namespace1"
  ]
}
