src/types/snapshots/treetop_core__types__user__tests__test_user_serialization__user_without_groups_and_namespace.snap
---
source: src/types/user.rs
expression: serialized
---
{
  "groups": [],
  "id": "test_user",
  "namespace": []
}
